refactor: 개인 스트릭을 check_ins 유도 방식으로 전환
개인(멤버) 스트릭을 challenge_members 에 저장하지 않고 check_ins 에서 유도한다.
businessDate 별 회차 수가 daily_check_in_count 이상인 날을 뽑아, 오늘부터 직전
인증 대상일(previousCheckInDay)로 되짚으며 이어지는 길이를 센다.

- MemberStreakCalculator: 완료한 날 집합을 입력으로 받아 연속 길이 계산(달력 규칙만
  앎). CheckInService.deriveCurrentStreak 가 자기 repository 로 집합을 뽑아 주입 →
  challenge 도메인이 checkin 을 참조하지 않는다.
- ChallengeMember 의 currentStreak/bestStreak/lastCompletedDate 필드 +
  completeDay()/hasCompleted() 제거. V7 로 세 컬럼 모두 DROP
  (last_completed_date 는 V6, current/best_streak 는 V1 dead).
- MemberCheckInResult 에서 memberCurrentStreak 제거 → ChallengeStreakService 는
  그룹 전원완료 + 유저 전역 스트릭 위임만 담당.

그룹 전원완료 판정은 멤버 행 잠금 읽기 대신 GroupDailyCompletionReader(REQUIRES_NEW)
로 바꿨다. last_completed_date 를 없애고 check_ins 잠금 읽기로 바꾸면, submit() 이
이미 저장(미커밋)한 check_in 을 완료자 트랜잭션이 잠그려다 group_points 락과 데드락한다
(CheckInApiIntegrationTest 동시성 케이스로 확인). 새 트랜잭션은 새 스냅샷이라 커밋된
인증을 보고, 잠금이 없어 형제의 미커밋 행에 걸리지 않는다. 그 읽기엔 자신의 이번 인증이
안 보이므로 자신은 완료로 치고 나머지만 확인한다. lockForGroupCompletion 은 유지.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DWqy3KJKfCN2zxuNAdURa7